only generate shares when needed

--- a/app/views/freezers/_howmany_ssss_k.slim
+++ b/app/views/freezers/_howmany_ssss_k.slim
@@ -1,2 +1,2 @@
-- pick = if params[:ssss_k] then params[:ssss_k] else DEFAULT_SSSK end
+- pick = params[:ssss_k] || DEFAULT_SSSK 
 = select_tag(:ssss_k, options_for_select(array,selected: pick ), class: 'pulldown small')
